--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "@supabase/supabase-auth-helpers": "^1.4.0",
+    "@supabase/ui": "^0.36.5",
+    "@tailwindcss/forms": "^0.5.1",
+    "atob": "^2.1.2",
+    "buffer": "^6.0.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.1",
+    "react-hot-toast": "^2.2.0",
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
