--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "atob": "^2.1.2",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
