--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "^2.2.0",
-    "react-query": "^3.39.0"
+    "react-query": "^3.39.0",
+    "use-clipboard-copy": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
