--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@supabase/supabase-auth-helpers": "^1.4.0",
     "@supabase/ui": "^0.36.5",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/firebase": "^3.2.1",
     "atob": "^2.1.2",
     "buffer": "^6.0.3",
     "classnames": "^2.3.1",
+    "firebase": "^9.20.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "^2.2.0",
     "react-query": "^3.39.0",
